# JiPP2

./: CMakeLists.txt
ProjektKoncowyAuto/: CMakeLists.txt  data.csv
ProjektKoncowyAuto/include/: auta.h
ProjektKoncowyAuto/src/: auta.cpp  main.cpp
allocation_basics/: CMakeLists.txt  main.cpp
lab_3_zad_10/: CMakeLists.txt  main.cpp
lab_3_zad_2/: CMakeLists.txt  main.cpp
lab_3_zad_3/: CMakeLists.txt
lab_3_zad_4/: CMakeLists.txt  main.cpp
lab_3_zad_5/: CMakeLists.txt  main.cpp
lab_3_zad_6/: CMakeLists.txt  main.cpp
lab_3_zad_7/: CMakeLists.txt  main.cpp
lab_3_zad_8/: CMakeLists.txt  main.cpp
lab_3_zad_9/: CMakeLists.txt  main.cpp
lab_4_zad_1/: CMakeLists.txt  main.cpp
lab_4_zad_10/: CMakeLists.txt  main.cpp
lab_4_zad_11/: CMakeLists.txt  main.cpp
lab_4_zad_2/: CMakeLists.txt  main.cpp
lab_4_zad_3/: CMakeLists.txt  main.cpp
lab_4_zad_4/: CMakeLists.txt  main.cpp
lab_4_zad_5/: CMakeLists.txt  main.cpp
lab_4_zad_6/: CMakeLists.txt  main.cpp
lab_4_zad_7/: CMakeLists.txt  main.cpp
lab_4_zad_8/: CMakeLists.txt  main.cpp
lab_4_zad_9/: CMakeLists.txt  main.cpp
lab_5_zad_1/: CMakeLists.txt
lab_5_zad_1/include/: Point.h
lab_5_zad_1/src/: Point.cpp  main.cpp
lab_5_zad_2/: CMakeLists.txt  main.cpp
lab_6/: CMakeLists.txt
lab_6/include/: Node.h  Triangle.h  Vector.h
lab_6/src/: Node.cpp  Triangle.cpp  Vector.cpp  main.cpp
lab_6_zad_1/: CMakeLists.txt
lab_7/: CMakeLists.txt
lab_8/: CMakeLists.txt
matrixApp/: CMakeLists.txt
matrixLib/: CMakeLists.txt
pole_figury/: CMakeLists.txt
simpleCalc/: CMakeLists.txt  main.cpp
(+20 files in other folders)
